<resources>
    <string name="app_name">ManagerApp</string>
    <string name="notes">Notes</string>
    <string name="button">Button</string>
    <string name="icon">icon</string>
    <string name="inotes">iNotes</string>
    <string name="reminder">Reminder</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="preference_file_key">\"com.example.managerapp\"</string>
    <string name="widgetname">widgetName</string>
    <string name="tilte">Tilte</string>
    <string name="text">text</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reminderText">Text</string>
    <string name="note_text">Note Text</string>
    <string name="note_title">Note Title</string>
    <string name="contacts">Contacts</string>
    <string name="avatar">desc</string>
    <string name="txt">txt</string>
    <string name="name">Name</string>
    <string name="surrname">Surrname</string>
    <string name="phone_number">Phone number</string>
    <string name="e_mail">E-Mail</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>