<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reminderapp.ReminderEditActivity">

    <EditText
        android:id="@+id/reminderTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderText"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/title"
        />

    <EditText
        android:id="@+id/reminderDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:autofillHints=""
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/reminderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderTitleText"
        app:layout_constraintVertical_bias="0.0"
        android:hint="@string/date"
        />

    <EditText
        android:id="@+id/reminderTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/reminderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderDate"
        app:layout_constraintVertical_bias="0.0"
        android:hint="@string/time"
        />

    <EditText
        android:id="@+id/reminderText"
        android:layout_width="0dp"
        android:layout_height="570dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:autofillHints='"note"'
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/reminderText"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmReminderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:gravity="bottom|end"
        android:src="@drawable/ic_baseline_check_24"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="?attr/selectableItemBackground"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>