<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:background="#E91E63"
                android:minHeight="?attr/actionBarSize"
                android:orientation="horizontal"
                android:theme="?attr/actionBarTheme">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/icon"
                    app:srcCompat="@drawable/peach" />

                <Space
                    android:layout_width="177dp"
                    android:layout_height="26dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/Name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:rotationX="0"
                    android:text="@string/inotes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                    android:textSize="36sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <Button
                android:id="@+id/notesButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:backgroundTintMode="src_in"
                android:onClick="notesOnClick"
                android:text="@string/notes" />

            <Button
                android:id="@+id/reminderButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>